--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "http-server"
+    "start": "five-server . -p 8000"
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/akmalzakia/fp-grafkom#readme",
   "dependencies": {
+    "five-server": "^0.1.2",
     "http-server": "^14.0.0"
   }
 }
